Most of yaml API doc is rewritten because of a design flaw that prevented correct error handling in BookingServiceImpl.java; several fixes to other classes to accomodate for the big change.
