# src/main/java/dgcplg/moviebooking/controller/dto/MovieListDTO.java
@@ -1,25 +1,25 @@
 package dgcplg.moviebooking.controller.dto;
 
-import dgcplg.moviebooking.model.Movie;
+import dgcplg.moviebooking.model.SearchPayloadDataInner;
 
 import java.util.List;
 
 public class MovieListDTO {
-    private List<Movie> movieList;
+    private List<SearchPayloadDataInner> movieList;
     private long recordCount;
 
     public MovieListDTO() {}
 
-    public MovieListDTO(List<Movie> movieList, long recordCount) {
+    public MovieListDTO(List<SearchPayloadDataInner> movieList, long recordCount) {
         this.movieList = movieList;
         this.recordCount = recordCount;
     }
 
-    public List<Movie> getMovieList() {
+    public List<SearchPayloadDataInner> getMovieList() {
         return movieList;
     }
 
-    public void setMovieList(List<Movie> movieList) {
+    public void setMovieList(List<SearchPayloadDataInner> movieList) {
         this.movieList = movieList;
     }
 
