# src/main/resources/movie-booking_openapi-doc.yaml
@@ -25,13 +25,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MovieList'
+                $ref: '#/components/schemas/Payload'
         default:
           description: error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorList'
+                $ref: '#/components/schemas/Payload'
   /booking:
     post:
       summary: sends a new booking of one or more seats for a specific user and movie
@@ -51,13 +51,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BookingResponse'
+                $ref: '#/components/schemas/Payload'
         default:
           description: if an error occurred during the booking
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorList'
+                $ref: '#/components/schemas/Payload'
   /booking/{bookingId}:
     delete:
       summary: cancel an existing booking
@@ -74,20 +74,39 @@ paths:
       responses:
         '204':
           description: the booking has been cancelled successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Payload'
         default:
           description: an error occurred during the cancellation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorList'
+                $ref: '#/components/schemas/Payload'
 components:
   schemas:
+    Payload:
+      oneOf:
+        - $ref: '#/components/schemas/LookupPayload'
+        - $ref: '#/components/schemas/SearchPayload'
+        - $ref: '#/components/schemas/ErrorPayload'
+      discriminator:
+        propertyName: payloadType
     LookupPayload:
       type: object
-      required: [metadata]
+      required: [metadata, data]
       properties:
+        payloadType:
+          type: string
+          x-discriminator-value: LookupPayload
         metadata:
           $ref: '#/components/schemas/Metadata'
+        data:
+          oneOf:
+            - $ref: '#/components/schemas/Booking'
+          discriminator:
+            propertyName: lookupType
     Metadata:
       type: object
       properties:
@@ -97,87 +116,6 @@ components:
           type: string
           pattern: '^\d{4}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T(0\d|1[0-9]|2[0-3]):[012345]\d:[012345]\d\.\d{3}\+0\d:[012345]\d$'
           example: '2019-02-14T17:20:07.866+01:00'
-    BookingResponse:
-      allOf:
-        - $ref: '#/components/schemas/LookupPayload'
-        - type: object
-          required: [data]
-          properties:
-            data:
-              $ref: '#/components/schemas/Booking'
-    SearchPayload:
-      type: object
-      required: [status, count, type]
-      properties:
-        status:
-          type: string
-          enum: [success, error]
-        count:
-          type: integer
-          format: int64
-        type:
-          type: string
-    MovieList:
-      type: object
-      allOf:
-        - $ref: '#/components/schemas/SearchPayload'
-        - type: object
-          required: [data]
-          properties:
-            data:
-              type: array
-              items:
-                $ref: '#/components/schemas/Movie'
-    Movie:
-      type: object
-      required: [movieId, title, startDatetime, availableSeats]
-      properties:
-        movieId:
-          type: integer
-          format: int64
-        title:
-          type: string
-        startDatetime:
-          type: string
-          format: date-time
-        availableSeats:
-          type: integer
-    ErrorList:
-      type: object
-      allOf:
-        - $ref: '#/components/schemas/SearchPayload'
-        - type: object
-          required: [data]
-          properties:
-            relationId:
-              type: string
-              nullable: true
-            timestamp:
-              type: string
-              pattern: '^\d{4}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T(0\d|1[0-9]|2[0-3]):[012345]\d:[012345]\d\.\d{3}\+0\d:[012345]\d$'
-              example: '2019-02-14T17:20:07.866+01:00'
-              nullable: true
-            data:
-              type: array
-              items:
-                $ref: '#/components/schemas/Error'
-    Error:
-      type: object
-      required:
-        - code
-      properties:
-        code:
-          type: string
-          enum: [ObjectNotFound, NotNull, InvalidArgument, InvalidState, TypeMismatch, MissingId, DataIntegrityViolationException, InvalidFileFormat, InvalidError, ObjectCannotBeSaved, InsufficientPermissions, SystemError, UniquenessViolationError, InvalidDateRange]
-        message:
-          type: string
-          nullable: true
-        objectName:
-          type: string
-          nullable: true
-        propertyName:
-          type: string
-          nullable: true
     Booking:
       type: object
       required: [movieId, userId, nSeatsBooked]
@@ -193,3 +131,89 @@ components:
           format: int64
         nSeatsBooked:
           type: integer
+        lookupType:
+          type: string
+          x-discriminator-value: Booking
+    SearchPayload:
+      type: object
+      required: [status, count, type, data]
+      properties:
+        status:
+          type: string
+          enum: [success]
+        count:
+          type: integer
+          format: int64
+        type:
+          type: string
+          enum: [Movie]
+        payloadType:
+          type: string
+          x-discriminator-value: SearchPayload
+        data:
+          type: array
+          items:
+            oneOf:
+              - $ref: '#/components/schemas/Movie'
+            discriminator:
+              propertyName: searchType
+    Movie:
+      type: object
+      required: [movieId, title, startDatetime, availableSeats]
+      x-class-extra-annotation: '@JsonIgnoreProperties({"type"})'
+      properties:
+        movieId:
+          type: integer
+          format: int64
+        title:
+          type: string
+        startDatetime:
+          type: string
+          format: date-time
+        availableSeats:
+          type: integer
+        searchType:
+          type: string
+          x-discriminator-value: Movie
+    ErrorPayload:
+      type: object
+      required: [status,count,type,data]
+      properties:
+        status:
+          type: string
+          enum: [error]
+        count:
+          type: integer
+          format: int64
+        type:
+          type: string
+          enum: [Error]
+        payloadType:
+          type: string
+          x-discriminator-value: ErrorPayload
+        relationId:
+          type: string
+        timestamp:
+          type: string
+          pattern: '^\d{4}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T(0\d|1[0-9]|2[0-3]):[012345]\d:[012345]\d\.\d{3}\+0\d:[012345]\d$'
+          example: '2019-02-14T17:20:07.866+01:00'
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/Error'
+    Error:
+      type: object
+      required: [code, message]
+      properties:
+        code:
+          type: string
+          enum: [ObjectNotFound, NotNull, InvalidArgument, InvalidState, TypeMismatch, MissingId, DataIntegrityViolationException, InvalidFileFormat, InvalidError, ObjectCannotBeSaved, InsufficientPermissions, SystemError, UniquenessViolationError, InvalidDateRange]
+        message:
+          type: string
+          nullable: true
+        objectName:
+          type: string
+          nullable: true
+        propertyName:
+          type: string
+          nullable: true
